force-app/main/default/objects/Result__c/Result__c.object-meta.xml
<CustomObject>
    <description>This object represents various results for the examinee.</description>
    <label>Result</label>
    <nameField>
        <displayFormat>RES-{000000000}</displayFormat>
        <label>Result Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>