force-app/main/default/objects/Result__c/fields/Date_of_Exam__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Exam__c</fullName>
    <label>Date of Exam</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>