force-app/main/default/objects/Result__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <label>Exam</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Exam__c.Status__c</field>
            <operation>equals</operation>
            <value>Launched</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>