force-app/main/default/objects/Result__c/fields/Examinee__c.field-meta.xml
<CustomField>
    <fullName>Examinee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examinee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Is_Examinee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Results</relationshipName>
    <type>Lookup</type>
</CustomField>