force-app/main/default/objects/Result__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>